--- a/HelloWorld/Pages/Counter.razor
+++ b/HelloWorld/Pages/Counter.razor
@@ -1,16 +1,8 @@
 ﻿@page "/counter"
+@inherits HelloWorldBlazor.CounterBase
 
 <h1>Counter Y'all!!!</h1>
 
 <p>Current count: @currentCount</p>
 
 <button class="btn btn-primary" onclick="@IncrementCount">Click me</button>
-
-@functions {
-    int currentCount = 0;
-
-    void IncrementCount()
-    {
-        currentCount++;
-    }
-}
