splitting markup and logic into separate files

--- a/HelloWorld/Pages/FetchData.razor
+++ b/HelloWorld/Pages/FetchData.razor
@@ -1,5 +1,6 @@
 ﻿@page "/fetchdata"
-@inject HttpClient Http
+@inherits HelloWorldBlazor.FetchDataBase;
+<!-- @inject HttpClient Http -->
 
 <h1>Weather forecast</h1>
 
@@ -34,7 +35,7 @@ else
     </table>
 }
 
-@functions {
+<!-- @functions {
     WeatherForecast[] forecasts;
 
     protected override async Task OnInitAsync()
@@ -52,4 +53,4 @@ else
 
         public string Summary { get; set; }
     }
-}
+} -->
