--- a/HelloWorld/Shared/NavMenu.razor
+++ b/HelloWorld/Shared/NavMenu.razor
@@ -27,7 +27,7 @@
     </ul>
 </div>
 
-<!-- @functions {
+@functions {
     bool collapseNavMenu = true;
 
     string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
@@ -36,4 +36,4 @@
     {
         collapseNavMenu = !collapseNavMenu;
     }
-} -->
+}
