--- a/HelloWorld/Pages/Counter.razor
+++ b/HelloWorld/Pages/Counter.razor
@@ -5,4 +5,5 @@
 
 <p>Current count: @currentCount</p>
 
-<button class="btn btn-primary" onclick="@IncrementCount">Click me</button>
+<button class="btn btn-primary" onclick="IncrementCount">Click me</button>
+@* @((Item item) => { OnSelect(item); }) *@
